위로 가기 버튼 추가

--- a/resume/index.html
+++ b/resume/index.html
@@ -255,6 +255,13 @@
           </li>
         </ul>
       </article>
+      <a
+        href="#"
+        class="block text-gray-500 text-right py-2 px-5 bg-teal-400 text-white rounded-full"
+      >
+        <span class="icon-arrow-up"></span>
+        top</a
+      >
     </main>
   </body>
 </html>
