main 최대 너비 추가

--- a/resume/index.html
+++ b/resume/index.html
@@ -48,7 +48,7 @@
         </ul>
       </nav>
     </header>
-    <main class="p-0 md:p-14 space-y-10">
+    <main class="p-0 md:p-14 mx-auto space-y-10 max-w-[1080px]">
       <article
         id="About"
         class="grid grid-cols-4 gap-8 p-8 shadow-lg rounded-lg bg-white"
