blog 링크 수정 및 새창으로 열기

--- a/resume/index.html
+++ b/resume/index.html
@@ -79,6 +79,7 @@
             <li class="w-62">
               <a
                 href="https://github.com/yeodahui"
+                target="_blank"
                 class="px-5 py-2 text-sm font-semibold rounded-full bg-gray-700 text-white"
               >
                 <span class="icon-social-github"></span> GitHub
@@ -86,7 +87,8 @@
             </li>
             <li class="w-62">
               <a
-                href="https://github.com/yeodahui"
+                href="https://velog.io/@devsaza"
+                target="_blank"
                 class="w-5 px-6 py-2 text-sm font-semibold rounded-full bg-teal-400 text-white"
               >
                 <span class="icon-note"></span> Blog
