--- a/resume/index.html
+++ b/resume/index.html
@@ -64,7 +64,7 @@
             프론트엔드 개발자 여다희 입니다.
             <br />
             동료와 함께하는 학습과 성장을 좋아하며, 빠른 피드백과 따뜻한
-            커뮤니케이션의 지향합니다. 모든 사용자들에게 공평한 서비스를
+            커뮤니케이션을 지향합니다. 모든 사용자들에게 공평한 서비스를
             전달하기 위해 고민하고 노력합니다.
           </p>
           <h3 class="text-xl font-bold text-gray-700 my-4">Contact</h3>
